--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "firebase": "^9.18.0",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0"
   },
